--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@ibm-watson/tone-analyzer-nodejs": "^1.1.1",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-beautiful-dnd": "^11.0.5",
     "react-browser-router": "^2.1.2",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
@@ -12,7 +14,8 @@
     "react-scripts": "3.0.1",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sass": "^1.22.9"
   },
   "scripts": {
     "start": "react-scripts start",
