--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@ibm-watson/tone-analyzer-nodejs": "^1.1.1",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "radium": "^0.25.2",
     "react": "^16.8.6",
+    "react-animations": "^1.0.0",
     "react-beautiful-dnd": "^11.0.5",
     "react-browser-router": "^2.1.2",
     "react-dom": "^16.8.6",
